# Navigo-release

./: .gitignore  CITATION.cff  LICENSE  README.md  adjustText.py  pyproject.toml  setup.py
.github/workflows/: sync-navigo-docs.yml
docs/: conf.py  index.md  installation.md
docs/_static/css/: override.css
docs/_templates/sidebar/: navigation.html
docs/api/: index.md  user.md
docs/introduction/: index.md
docs/tutorials/: index.md  index_grn.md  index_interpolation.md  index_knockout.md  index_reprogramming.md  index_training_demo.md
docs/tutorials/notebooks/grn_section/: 01_Navigo_GRN_CHD.ipynb  01_Navigo_GRN_CHD_executed.ipynb
docs/tutorials/notebooks/interpolation_section/: 01_Navigo_Interpolation_Benchmarking.ipynb  01_Navigo_Interpolation_Benchmarking_executed.ipynb  02_Navigo_Interpolation_Denoising.ipynb  02_Navigo_Interpolation_Denoising_executed.ipynb
docs/tutorials/notebooks/knockout_section/: 01_Navigo_KO_Limb_Pathway_Enrichment.ipynb  01_Navigo_KO_Limb_Pathway_Enrichment_executed.ipynb  02_Navigo_KO_Simulation_Experimental_Panels.ipynb  02_Navigo_KO_Simulation_Experimental_Panels_executed.ipynb  03_Navigo_KO_GLI_DEG_Enrichment_Summary.ipynb  03_Navigo_KO_GLI_DEG_Enrichment_Summary_executed.ipynb
docs/tutorials/notebooks/training_demo/: 01_Navigo_Training_Demo.ipynb  (+2 more)
navigo/: __init__.py  grn.py  interpolation_case_render_end_to_end_figures.py  io.py  metrics.py  model.py  network.py  pl.py  pp.py  tl.py  training_demo_validate_intermediate_metrics.py  trajectory.py  utils.py
submission/: run_tutorial_notebooks.py  sync_docs_repo.sh
(+13 files in other folders)
